2008-04-14 TualatriX <tualatrix@gmail.com>

	* programs/python/ubuntu-tweak: 用常量来标识App。

2008-04-09 TualatriX <tualatrix@gmail.com>

	* programs/python/ubuntu-tweak: 进一步组装。

2008-04-08 TualatriX <tualatrix@gmail.com>

	* programs/python/ubuntu-tweak: 正在组装。

2008-04-07 TualatriX <tualatrix@gmail.com>

	* programs/python/ubuntu-tweak: 继续应用新的API。

2008-03-24 TualatriX <tualatrix@gmail.com>

	* programs/python/ubuntu-tweak/Compiz.py: 基本更新Compiz，全新API。

2008-03-23 TualatriX <tualatrix@gmail.com>

	* programs/python/ubuntu-tweak/Widgets.py: 加入新的Pack API。
	* programs/python/ubuntu-tweak/Metacity.py: 基本更新Metacity。

2008-03-19 TualatriX <tualatrix@gmail.com>

	* programs/python/ubuntu-tweak/Utility.py: 加入单元测试功能。
	* programs/python/ubuntu-tweak/Icon.py: 将Icon换上了新的API。
	
2008-03-18 TualatriX <tualatrix@gmail.com>

	* programs/python/ubuntu-tweak: 加入Ubuntu Tweak最新分支。

2008-03-04 TualatriX <tualatrix@gmail.com>

	* documents/gobject-concepts: 加入了《GObject的概念》。

2008-03-03 TualatriX <tualatrix@gmail.com>

	* gtk/socket-plug: 加入了一个GTK+的socket和plug的例子。
	* programs: 所有的程序将移入这里。
	* documents: 所有的文档将移入这里。

2008-02-27 TualatriX <tualatrix@gmail.com>

	* gtk/pagico: 加入了基于gtkembedmoz的Pagico客户端。

2008-02-21 TualatriX <tualatrix@gmail.com>

	* archive/stu_manager: 加入了第一次编的软件。

2008-02-20 TualatriX <tualatrix@gmail.com>

	* gtk/example/boy: 加入一个GObject的例子。

2008-01-19 TualatriX <tualatrix@gmail.com>

	* "Myword" 0.8

2008-01-16 TualatriX <tualatrix@gmail.com>

	* "Myword" 0.7

2008-01-15 TualatriX <tualatrix@gmail.com>

	* "Myword" 0.6

2008-01-14 TualatriX <tualatrix@gmail.com>

	* "Myword" 0.5

2008-01-09 TualatriX <tualatrix@gmail.com>

	* "Myword" 0.4

2008-01-08 TualatriX <tualatrix@gmail.com>

	* "Myword" 0.3.0

2008-01-07 TualatriX <tualatrix@gmail.com>

	* "Myword" 0.2.5

2008-01-06 TualatriX <tualatrix@gmail.com>

	* "Myword" 0.2

2008-01-05 TualatriX <tualatrix@gmail.com>

	* "Myword" 0.1

2008-01-04 TualatriX <tualatrix@gmail.com>

	* "Myword" added the result function.
