@@ -1,3 +1,7 @@
+2008-04-24 TualatriX <tualatrix@gmail.com>
+
+	* programs/python/ubuntu-tweak: 加入Keybinding功能。
+
 2008-04-14 TualatriX <tualatrix@gmail.com>
 
 	* programs/python/ubuntu-tweak: 用常量来标识App。
